logs/Slang/generated/keywords/5.6.2--keyword_always_latch.sv.log
name: always_latch
description: The 'always_latch' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_latch.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_latch.sv:8:8: error: expected declarator
    bit always_latch;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_latch.sv:8:21: error: expected statement
    bit always_latch;
                    ^
